LU-413 osc: do not miss preallocated objects

osc_precreate, osc_create, handle_async_create used to check
OSCC_FLAG_NOSPC before checking for preallocated objects, that
did not allow to use all OST objects. Move checks for
OSCC_FLAG_NOSPC past checking for preallocated objects.

Change filter_precreate to return 0 if it manages to precreate
at least one object.

With these changes there is no need to limit number of files
created by performance tests.

Signed-off-by: Vladimir Saveliev <vladimir.saveliev@oracle.com>
Change-Id: I03f734ff684416edc8cebf821b79c733754f6aa6